Copyright (c) 2002-2007 Infrae. All rights reserved.
See also LICENSE.txt

Silva changes
 
  Silva 1.6 (SVN/UNRELEASED)

    Features added:

      - The published status of containers changed: A folder is published
        when its default document is published, not published when its 
        default document isn't published, and if no default document is 
        present, it is considered published if any of its contents are 
        published. This cuts down on some unnecessary recursion, as well as
        giving editors a nice way to temporarily exclude trees from 
        navigation, so that they can be worked on.

      - Fixed behavior in Internet Explorer where it's impossible to change
        the "link to" field in the image toolbox in kupu, by removing the
        onkeypress event.

      - Changed title fields to string fields, for easy FF fill-in

      - External sources inside headers or table cells, are not allowed. An
        alert box is shown now, to make this clearer. (issue 1578)
      
      - Disabled custom kupu context menu, so that the original browser
        context menu is shown. This allows firefox users to use the firefox
        spellchecker
      
      - Changed the lang attribute of the layout macro html tag to get the
        lang from metadata, as in: https://infrae.com/issue/silva/issue1566
        Lower cased the language codes in the metadata set, as in:
        https://infrae.com/issue/silva/issue1668

      - Moved the css selectors for rollover tooltips in Kupu toolboxes
        higher in the cascade so they apply to all toolboxes. Added tooltips
        for the new anchor/index item toolbox and the abbr/acronym toolbox.

      - Fixed up the Indexer:
          Add tbody since Zope puts it in anyway
          Add odd/even cycling for table rows
          Remove double defines
          Fix title for cases where there isn't one
          Fix display for empty indexer
          Reduce arbitrary indenting
